# IrrRecastDetour

./: CMakeLists.txt  README.md
assets/: main.frag  main.vert  test_map_2.blend  test_map_2.blend1  test_map_2.mtl
assets/demo/: demo.blend  demo.blend1  demo.mtl
assets/example_level/: example_level.blend  example_level.blend1  example_level.mtl  example_level_dynamic.blend  example_level_dynamic.blend1  example_level_dynamic.mtl
assets/realms/: realms.blend  realms.blend1  realms.mtl
assets/realms/ROTH_Resources/: remove_spaces.sh
assets/realms/ROTH_Resources/ADEMO/: 002_GRAB.tga  004_YEILWAL1_01.tga  004_YEILWAL1_02.tga  004_YEILWAL1_03.tga  004_YEILWAL1_04.tga  004_YEILWAL1_05.tga  004_YEILWAL1_06.tga  004_YEILWAL1_07.tga  004_YEILWAL1_08.tga  004_YEILWAL1_09.tga  004_YEILWAL1_10.tga  004_YEILWAL1_11.tga  004_YEILWAL1_12.tga  004_YEILWAL1_13.tga  004_YEILWAL1_14.tga  004_YEILWAL1_15.tga  004_YEILWAL1_16.tga  004_YEILWAL1_17.tga  004_YEILWAL1_18.tga  004_YEILWAL1_19.tga  004_YEILWAL1_20.tga  005_YEILWAL2_02.tga  005_YEILWAL2_03.tga  005_YEILWAL2_04.tga  005_YEILWAL2_05.tga  005_YEILWAL2_06.tga  005_YEILWAL2_07.tga  005_YEILWAL2_08.tga  005_YEILWAL2_09.tga  005_YEILWAL2_10.tga  005_YEILWAL2_11.tga  005_YEILWAL2_12.tga  005_YEILWAL2_13.tga  005_YEILWAL2_14.tga  005_YEILWAL2_15.tga  005_YEILWAL2_16.tga  005_YEILWAL2_17.tga  005_YEILWAL2_18.tga  005_YEILWAL2_19.tga  005_YEILWAL2_20.tga  (+4950 more)
assets/realms/ROTH_Resources/BACKDROP/: 001.tga
assets/realms/ROTH_Resources/DBASE200/: 001.tga  002.tga  003.tga  004.tga  005.tga  006.tga  007.tga  008.tga  009.tga  010.tga  011.tga  012.tga  013.tga  014.tga  015.tga  016.tga  017.tga  018.tga  019_01.tga  019_02.tga  019_03.tga  019_04.tga  019_05.tga  020_01.tga  020_02.tga  020_03.tga  020_04.tga  020_05.tga  020_06.tga  020_07.tga  021.tga  022.tga  023.tga  024.tga  025.tga  026.tga  027.tga  028.tga  029.tga  030.tga  (+289 more)
assets/realms/ROTH_Resources/DBASE300/: 001.gdv  002.gdv  003.gdv  004.gdv  005.gdv  006.gdv  007.tga  008.gdv  009.gdv  010.gdv  011.gdv  012.gdv  013.gdv  014.gdv  015.gdv  016.gdv  017.gdv  018.tga  019.gdv  020.gdv  021.gdv  022.gdv  023.gdv  024.gdv  025.gdv  026.gdv  027.gdv  028.gdv  029.gdv  030.gdv  031.gdv  032.gdv  033.gdv  034.gdv  035.gdv  036.gdv  037.gdv  038.gdv  039.gdv  040.gdv  (+182 more)
assets/realms/ROTH_Resources/DEMO/: 002_CORWL15-wall_next_to_paint.tga  003_BRWALL-wall_texture_.tga  004_BRICK-brick_texture.tga  005_HALLWA8-hall_wall.tga  006_CABINFL1-floor_in_cab_rm.tga  007_HALLWA1-hallway_text_.tga  008_FLRPATTE-wooden_floor.tga  009_WALLPAP1-wallpaper_text_.tga  010_ARCH2-brick_archway_.tga  011_PAINT7-gregs_painting_.tga  012_PAINT8-another_of_gregs_.tga  013_CORWL16-wall_next_to_paint_.tga  014_CEILING1-study_ceiling.tga  015_ARCHS1-arch_in_cab_room_.tga  016_WALLTOP1-s_wall_-_top_sect_.tga  017_DOORDEC-study_door_frame.tga  018_DOORDEC2-study_door_frame.tga  019_BAYWALL-wall_text.tga  020_FLOOR1-Floor.tga  021_BAYCEIL-baywndow_ceiling_.tga  022_BAYCEIL1-baywndow_ceiling_.tga  023_STUCEI1-study_ceiling.tga  024_STUCEI2-study_ceiling.tga  025_STUCEI3-study_ceiling.tga  026_STUCEI4-study_ceiling.tga  027_STULITE1-ceiling_light_rose_.tga  028_STULITE2-ceiling_light_rose_.tga  029_STCARPET-main_study_carpet.tga  030_STCARPE1-main_study_carpet.tga  031_STCARPE2-main_study_carpet.tga  032_BOOKCAS1-study_bookcase.tga  033_BKCASIDE-side_of_bkcase.tga  034_WALLTOP2-wall_cornice_.tga  035_CORWL17-wall_nr_paint.tga  036_STCARPE3-main_study_carpet_.tga  037_WALLTOP3-wall_cornice_.tga  038_BOOKCAS2-study_bookcase.tga  039_CORWL18-wall_nr_paint.tga  040_DOORDE10-arch_side.tga  041_CHIMBRE1-chimney_breast_.tga  (+978 more)
assets/realms/ROTH_Resources/DEMO1/: 002_TEXT1-floor_texture.tga  003_CLOUDS3-as_above_.tga  004_CTOWER1-tower_in_clouds.tga  005_GRASS2-daylit_grass.tga  008_GRASS5-as_above.tga  009_SHAFT1-rock_shaft.tga  010_SOTRAN1-s-stone_transporter_.tga  011_SKY-night_sky_.tga  012_BRIDGE1-bridge_surface_.tga  013_SHAFT2-shaft_-_no_grass.tga  014_MENHR1A-standing_stone_.tga  015_MENHR1C-as_above.tga  016_MENHR1D-as_above.tga  017_MENHR2A-broken_menhir.tga  018_MENHR2B-as_above.tga  019_MENHR2C-as_above.tga  020_MENHR2D-as_above.tga  021_CASWALL2-castle_wall.tga  022_CASWALL3-as_above.tga  023_CASWALL4-broken_wall.tga  024_CASWALL5-wall_top.tga  025_CASARCH1-arch_in_cast_wall.tga  026_CASARCH2-arch_and_portcullis.tga  027_SOLFLOR1-grass_and_rubble.tga  028_SOLFLOR2-as_above.tga  029_CASFLOR1-castle_flor.tga  030_WATER1-river_01.tga  030_WATER1-river_02.tga  030_WATER1-river_03.tga  030_WATER1-river_04.tga  030_WATER1-river_05.tga  030_WATER1-river_06.tga  030_WATER1-river_07.tga  030_WATER1-river_08.tga  031_WATER2-still_water__01.tga  032_WATER3-moving_h2o__02.tga  032_WATER3-moving_h2o__04.tga  032_WATER3-moving_h2o__05.tga  033_RBANK1-river_bank_+_water_01.tga  033_RBANK1-river_bank_+_water_02.tga  (+1303 more)
assets/realms/ROTH_Resources/DEMO2/: 001_GNSKY-sky.tga  003_GNARWA3-chamber_wall.tga  004_GNARWA4-as_above.tga  005_GNCEIL1-gnarl_rm_ceiling.tga  006_GNCEIL2-ceiling_with_lite.tga  007_GNFLOR1-gnarl_rm_flor.tga  008_GNFLOR2-floor_with_lite.tga  009_GNFLOR3-as_above.tga  010_GNFLOR4-as_above.tga  011_GNFLOR5-as_above.tga  012_GNFLOR6-as_above.tga  (+231 more)
assets/test_level/: test_level.blend  test_level.blend1  test_level.mtl
examples/: CMakeLists.txt
examples/Demo_Static/: .Demo_Static.cpp.swp  Demo_Static.cpp
examples/Demo_Tiled/: .Demo_Tiled.cpp.swp  Demo_Tiled.cpp
examples/Realms/: Realms.cpp
examples/common/: InputEventReceiver.h  NavMeshGUI.cpp  NavMeshGUI.h
include/IrrRecastDetour/: AbstractNavMesh.h  INavMesh.h  StaticNavMesh.h  TiledNavMesh.h
irrlicht-1.8.5/media/: Sprite-0001.aseprite  test_map.blend  test_map.mtl  test_map_2.blend  test_map_2.blend1
src/: AbstractNavMesh.cpp  AbstractNavMesh.h  CStaticNavMesh.cpp  CTiledNavMesh.cpp  Config.h  INavMesh.cpp  InputEventReceiver.cpp  InputEventReceiver.h  NavMesh.cpp  NavMesh.h  StaticNavMesh.cpp  StaticNavMesh.h  TiledNavMesh.cpp  TiledNavMesh.h  ai_Pathfinding.cpp  ai_Pathfinding.h  ai_util_RecastDetour.cpp  ai_util_RecastDetour.h  main.cpp
(+1691 files in other folders)
